[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Levels/Level.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Water/SimpleWater.tscn" type="PackedScene" id=2]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 600, 0, 0, 0, 0, 0, 0, 0 )
}

[node name="Level" type="Node2D"]
script = ExtResource( 1 )

[node name="ObjectSpawner" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="ObjectSpawner"]
position = Vector2( 600, 0 )
rotation = 3.14159

[node name="Background" type="Sprite" parent="."]

[node name="SimpleWater" parent="Background" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 601.0
margin_right = 1401.0
margin_bottom = 602.0

[node name="Timer" type="Node2D" parent="."]

[node name="TimerRock" type="Timer" parent="Timer"]
wait_time = 3.0
autostart = true

[node name="TimerFish" type="Timer" parent="Timer"]
wait_time = 30.0
autostart = true

[node name="TimerTrunk" type="Timer" parent="Timer"]
wait_time = 15.0
autostart = true

[connection signal="timeout" from="Timer/TimerRock" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer/TimerFish" to="." method="_on_TimerFish_timeout"]
[connection signal="timeout" from="Timer/TimerTrunk" to="." method="_on_TimerTrunk_timeout"]
